--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
