--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
